--- a/css/sign_form.css
+++ b/css/sign_form.css
@@ -1,3 +1,124 @@
-h1 {
-    color: red;
+* {
+    padding: 0;
+    margin: 0;
+    box-sizing: border-box;
 }
+body {
+    width: 100%;
+    height: 100vh;
+    display: flex;
+    font-family:Verdana, Geneva, Tahoma, sans-serif;
+    font-size: 16px;
+}
+img {
+    width:100%;
+    height: 100%;
+}
+@font-face {
+    font-family: Norse;
+    src: url("../fonts/Norse-Bold.otf");
+}
+
+    header {
+        width: 30%;
+        height: 100%;
+        background-image: url(../img/halie-west.jpg);
+        background-size: cover;
+
+    }
+        .logo {
+            width: 100%;
+            height: 20%;
+            background-color: rgba(0, 0, 0, 0.233);
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            position: relative; 
+            top: 20%;
+        }
+        .logo img{
+            width: 20%;
+            height: 90%;
+        }
+        .logo h2 {
+            font-family: Norse;
+            font-size: 5rem;
+            color: white;
+        }
+        header p {
+            position:absolute;
+            bottom: 10px;
+            color: white
+        }
+        header p a{
+            text-transform: none;
+            text-decoration: none;
+            color:white;
+            font-size: small;
+        }
+
+    main {
+        width: 70%;
+        height: 100vh;
+    }
+        .info {
+            width: 100%;
+            height: 40%;
+            background-color: rgba(128, 128, 128, 0.253);
+            padding-left: 20px;
+            padding-top: 11%;
+            overflow: hidden;
+        }
+        .info :last-child {
+            margin-top: 1rem;
+        }
+        .sign{
+            width: 100%;
+            height: 30%;
+            box-shadow: 0 4px 10px grey;
+            
+        }
+        .sign form {
+            width: 100%;
+            height: 100%;
+            display: flex;
+            flex-wrap: wrap;
+            position: relative;
+            padding-left: 20px;
+            font-size: 0.8rem;
+
+        }
+        .sign form legend {
+            width: 100%;
+            height: 10%;
+            font-size: 1.5rem;
+            margin: 10px 0;
+        }
+            .sign div {
+                width: 40%;
+                height: 25%;
+            }
+        .sign button {
+            width: 20%;
+            height: 30px;
+            background-color: olive;
+            position: absolute;
+            bottom: -50px;
+            border-radius: 8px;
+        }
+        .log {
+            width: 100%;
+            height: 30%;
+            position: relative;
+            padding-left: 20px;
+            background-color: rgba(128, 128, 128, 0.281);
+        }
+            .log p{
+                position: absolute;
+                top: 80px;
+                font-size: 0.8rem;
+            }
+            .log p a {
+                text-decoration: none;
+                color: olive;
+            }
